# pr-reviewer

./: README.md  pr-reviewer.ipynb  pr-reviewer.py  pyproject.toml  requirements.txt
src/: __main__.py
