[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prreviewer_Hugo0Vaz"
version = "0.1.0"
authors = [
  { name="Hugo Vaz", email="hugomartinsvaz@gmail.com" },
]
description = "A Pull Request revision package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Hugo0Vaz/pr-reviewer"
Issues = "https://github.com/Hugo0Vaz/pr-reviewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prreviewer"]
